<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="@dimen/_10sdp"
        android:text="@string/registration"
        android:textColor="@android:color/white" />

    <!-- email -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="@dimen/_11sdp" />
    </android.support.design.widget.TextInputLayout>

    <!-- password -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/_11sdp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/et_display_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_display_name"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="@dimen/_11sdp" />
    </android.support.design.widget.TextInputLayout>

    <!-- create my account -->
    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp"
        android:text="@string/create_my_account" />


</LinearLayout>