<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <!-- email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/_11sdp" />
        </android.support.design.widget.TextInputLayout>

        <!-- password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/_11sdp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>

    <!-- or -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

    </LinearLayout>

    <!-- via fb or gmail -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>